fixed overlapping
also made responsive

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,7 +1,7 @@
-nav a {
+/*nav a {
 	color: black;
 	text-decoration: none;
-}
+}*/
 
 .logo {
 	width: 60%;
@@ -98,4 +98,122 @@ button:hover {
 footer {
 	padding: 5% 0 1% 1%;
 }
+
+
+
+
+/* ******** Media Queries ******** */
+@media only screen and (max-width: 1044px) {
+.logo {margin-bottom: 40px;}
+
+.button-container {width: 70%;
+				   margin: 0 auto;
+				   margin-bottom: 60px;}
+
+button {margin: 0 auto}
+
+.item-name {width: 280px;
+			height: 250px}
+}
+
+/* ************************************* */
+@media only screen and (max-width: 915px) {
+.item-name {width: 230px;
+			height: 220px}
+}
+
+/* ************************************* */
+@media only screen and (max-width: 820px) {
+.logo {margin-bottom: 20px;}
+
+/*.button-container {width: 80%;
+				   margin: 0 auto;
+				   margin-bottom: 50px;}*/
+
+button {margin: 0 auto}
+
+.item-name {width: 230px;
+			height: 180px}
+}
+
+/* ************************************* */
+@media only screen and (max-width: 760px) {
+header{text-align: center}
+
+.button-container {margin-right: 13%;}
+
+button {font-size: 12pt;
+		margin: 0;
+		width: 30%;}
+
+.grid {width: 80%;
+	   margin-left: 2%;}
+
+.grid-item {width: 60%;}
+
+.item-name {width: 300px;
+			height: 250px}
+}
+
+/* ************************************* */
+/* When grid switches to one column */
+@media only screen and (max-width: 681px) {
+.logo {width: 90%;}
+
+.button-container {margin-bottom: 70px;
+				   width: 90%;}
+
+button {width: 30%;
+	    margin: 0;}
+
+.grid {width: 90%;}
+
+.grid-item {width: 90%;}
+
+.item-name {width: 430px;
+			height: 370px}
+}
+
+/* ************************************* */
+@media only screen and (max-width: 657px) {
+.button-container {margin-right: 6%;}
+
+.grid-item {width:100%;
+			margin: 30px 0 30px 15px;}
+}
+
+/* ************************************* */
+@media only screen and (max-width: 555px) {
+
+button {width: 32%;
+		padding: 20px;}
+
+.grid {width: 80%;
+	   margin-top: 0;
+	   padding-bottom: 20px;}
+
+.grid-item {width:100%;
+			margin: 30px 0 30px 40px;}
+
+.item-name {width: 280px;
+			height: 225px}
+
+footer {padding-top: 80px;
+		font-size: 8pt;}
+}
+
+/* ************************************* */
+@media only screen and (max-width: 450px) {
+button {width: 80%;}
+
+.grid {width: 90%;}
+
+.item-name{width: 300px;}
+}
+
+
+
+
+
+
 
